kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-demo-service

spec:
  selector:
    app: sre-demo

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
