kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sre-demo-ingress
  namespace: sre-demo

  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  ingressClassName: nginx

  rules:
    - host: sre-demo.example.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: sre-demo-service

                port:
                  number: 80
